# aau_gazebo_vicon

./: CMakeLists.txt  README.md  package.xml
include/ros_transform_gazebo_plugin/: ros_transform_gazebo_plugin.h
launch/: aau_gazebo_vicon.launch
models/: database.config
models/stick/: model.config  stick.sdf
src/: ros_transform_gazebo_plugin.cpp
worlds/: uas_lab.world
