<?xml version="1.0"?>
<package>
  <name>aau_gazebo_vicon</name>
  <version>0.1.0</version>
  <description>Interact with Gazebo models via a Vicon system through TransformStamped messages</description>

  <maintainer email="kdh@es.aau.dk">Karl D. Hansen</maintainer>

  <license>GPLv3</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="kdh@es.aau.dk">Karl D. Hansen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo</run_depend>

</package>